docs/0.18/_sources/api/gammapy.modeling.models.SpectralModel.rst.txt
SpectralModel
=============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectralModel.covariance
      ~SpectralModel.default_parameters
      ~SpectralModel.is_norm_spectral_model
      ~SpectralModel.parameters
      ~SpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectralModel.__call__
      ~SpectralModel.copy
      ~SpectralModel.create
      ~SpectralModel.energy_flux
      ~SpectralModel.energy_flux_error
      ~SpectralModel.evaluate_error
      ~SpectralModel.from_dict
      ~SpectralModel.from_parameters
      ~SpectralModel.integral
      ~SpectralModel.integral_error
      ~SpectralModel.inverse
      ~SpectralModel.plot
      ~SpectralModel.plot_error
      ~SpectralModel.spectral_index
      ~SpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
